bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:2: error: ')' expected but integer literal found.
  if((temp 1 <0 &&  temp 2 > 100) | (temp 1 > 100 && temp 2 < 0)) {
           ^IcyHot:8: error: ')' expected but '}' found.
} 
^