bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {
  if((temp 1 <0 &&  temp 2 > 100) | (temp 1 > 100 && temp 2 < 0)) {
    return true
  }
  else {
    return false
  }
}